responsive crear-rifa

--- a/eventos/templates/home.html
+++ b/eventos/templates/home.html
@@ -8,7 +8,7 @@
 {% block content %}
     <nav>
         <div class="nav-wrapper black">
-            <a href="//{{ host }}/config/" class="brand-logo right " style="padding-right: 3%;">Rifas Villada</a>
+            <a  class="brand-logo right " style="padding-right: 3%;">Rifas Villada</a>
         </div>
     </nav>
 
