--- a/eventos/templates/create.html
+++ b/eventos/templates/create.html
@@ -8,13 +8,13 @@
 {% block content %}
     <nav>
         <div class="nav-wrapper black">
-            <a href="//{{ host }}/config/" class="brand-logo right " style="padding-right: 3%;">Rifas Villada</a>
+            <a class="brand-logo right " style="padding-right: 3%;">Rifas Villada</a>
         </div>
     </nav>
 
     <div class="row">
 
-        <div class="col s0 m2 l2">
+        <div class="col s1 m2 l2">
             <!-- Note that "m4 l3" was added -->
             <!-- Grey navigation panel
 
@@ -25,7 +25,7 @@
 
         </div>
 
-        <div class="col s12 m8 l8">
+        <div class="col s10 m8 l8">
             <!-- Note that "m8 l9" was added -->
             <!-- Teal page content
 
@@ -62,7 +62,7 @@
                 </form>
 
 
-        <div class="col s0 m2 l2">
+        <div class="col s1 m2 l2">
             <!-- Note that "m4 l3" was added -->
             <!-- Grey navigation panel
 
